--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     depends_on:
       - db
     environment:
-      XDEBUG_MODE: "off"
+      XDEBUG_MODE: ${XDEBUG_MODE:-off}
   db:
     image: postgres
     container_name: db
